--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,18 @@
+/*******************************************************************************
+ * ASWNN - homepage to A Site With No Name and its projects.
+ * Copyright (C) 2015-present Brian Duffey and Billy Alexander
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see {http://www.gnu.org/licenses/}.
+ * Home: https://asitewithnoname.com/
+ */
 // Required
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
@@ -42,17 +57,17 @@
 @import "./mixins.scss";
 
 body {
-	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	overflow-x: hidden;
-	position: relative;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
+  position: relative;
 }
 
 p {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 p.small {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 a,
@@ -60,8 +75,8 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-	color: $success;
-	outline: none;
+  color: $success;
+  outline: none;
 }
 
 h1,
@@ -70,84 +85,84 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
-	font-weight: 700;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 hr.star-light,
 hr.star-primary {
-	padding: 0;
-	border: none;
-	border-top: solid 5px;
-	text-align: center;
-	max-width: 250px;
-	margin: 25px auto 30px;
-	opacity: 1;
+  padding: 0;
+  border: none;
+  border-top: solid 5px;
+  text-align: center;
+  max-width: 250px;
+  margin: 25px auto 30px;
+  opacity: 1;
 }
 
 hr.star-light:after,
 hr.star-primary:after {
-	content: " ";
-	background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-star-fill' viewBox='0 0 16 16'><path d='M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z'/></svg>");
-	background-repeat: no-repeat;
-	background-size: contain;
-	display: inline-block;
-	position: relative;
-	top: -0.8em;
-	font-size: 2em;
-	padding: 0 0.25em;
-	height: 16px;
-	width: 16px;
+  content: " ";
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-star-fill' viewBox='0 0 16 16'><path d='M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z'/></svg>");
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-block;
+  position: relative;
+  top: -0.8em;
+  font-size: 2em;
+  padding: 0 0.25em;
+  height: 16px;
+  width: 16px;
 }
 
 hr.star-light {
-	border-color: white;
+  border-color: white;
 }
 
 hr.star-light:after {
-	background-color: $success;
-	color: white;
+  background-color: $success;
+  color: white;
 }
 
 hr.star-primary {
-	border-color: $primary;
+  border-color: $primary;
 }
 
 hr.star-primary:after {
-	background-color: white;
-	color: $primary;
+  background-color: white;
+  color: $primary;
 }
 
 section {
-	padding: 100px 0;
+  padding: 100px 0;
 
-	h2 {
-		margin: 0;
-		font-size: 3em;
-	}
+  h2 {
+    margin: 0;
+    font-size: 3em;
+  }
 }
 
-@media(max-width:767px) {
-	section {
-		padding: 75px 0;
-	}
+@media (max-width: 767px) {
+  section {
+    padding: 75px 0;
+  }
 }
 
 // Buttons
 
 .btn-primary {
-	@include button-variant(white, $primary, $primary);
-	font-weight: 700;
+  @include button-variant(white, $primary, $primary);
+  font-weight: 700;
 }
 
 .btn-success {
-	@include button-variant(white, $success, $success);
-	font-weight: 700;
+  @include button-variant(white, $success, $success);
+  font-weight: 700;
 }
 
 .btn:focus,
 .btn:active,
 .btn.active {
-	outline: none;
+  outline: none;
 }
