--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -1,49 +1,62 @@
+/*******************************************************************************
+ * ASWNN - homepage to A Site With No Name and its projects.
+ * Copyright (C) 2015-present Brian Duffey and Billy Alexander
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see {http://www.gnu.org/licenses/}.
+ * Home: https://asitewithnoname.com/
+ */
 @mixin button-variant($color, $background, $border) {
-	color: $color;
-	background-color: $background;
-	border-color: $border;
+  color: $color;
+  background-color: $background;
+  border-color: $border;
 
-	@at-root {
+  @at-root {
+    &:hover,
+    &:focus,
+    &:active,
+    &.active,
+    .open .dropdown-toggle#{&} {
+      color: $color;
+      background-color: darken($background, 10%);
+      border-color: darken($border, 12%);
+    }
 
-		&:hover,
-		&:focus,
-		&:active,
-		&.active,
-		.open .dropdown-toggle#{&} {
-			color: $color;
-			background-color: darken($background, 10%);
-			border-color: darken($border, 12%);
-		}
+    &:active,
+    &.active,
+    .open .dropdown-toggle#{&} {
+      background-image: none;
+    }
 
-		&:active,
-		&.active,
-		.open .dropdown-toggle#{&} {
-			background-image: none;
-		}
+    &.disabled,
+    &[disabled],
+    fieldset[disabled] #{&} {
+      &,
+      &:hover,
+      &:focus,
+      &:active,
+      &.active {
+        background-color: $background;
+        border-color: $border;
+      }
+    }
+  }
 
-		&.disabled,
-		&[disabled],
-		fieldset[disabled] #{&} {
-
-			&,
-			&:hover,
-			&:focus,
-			&:active,
-			&.active {
-				background-color: $background;
-				border-color: $border;
-			}
-		}
-	}
-
-	.badge {
-		color: $background;
-		background-color: $color;
-	}
+  .badge {
+    color: $background;
+    background-color: $color;
+  }
 }
 
 @mixin transition-all() {
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-	transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
 }
